frontend/src/_styles/widgets/kanban.scss
.handle {
  display: flex;
  width: 12px;
  padding: 15px;
  align-items: center;
  justify-content: center;
  flex: 0 0 auto;
  touch-action: none;
  border-radius: 5px;
  border: none;
  outline: none;
  appearance: none;
  background-color: transparent;
  -webkit-tap-highlight-color: transparent;

  &:hover {
    background-color: rgba(0, 0, 0, 0.05);

    svg {
      fill: #6f7b88;
    }
  }

  svg {
    flex: 0 0 auto;
    margin: auto;
    height: 100%;
    overflow: visible;
    fill: #919eab;
  }

  &:active {
    background-color: rgba(0, 0, 0, 0.05);

    svg {
      fill: #788491;
    }
  }
}

$font-weight: 400;
$background-color: #fff;
$border-color: #efefef;
$text-color: #333;
$handle-color: rgba(0, 0, 0, 0.25);
$box-shadow-border: 0 0 0 calc(1px / var(--scale-x, 1)) rgba(63, 63, 68, 0.05);
$box-shadow-common: 0 1px calc(3px / var(--scale-x, 1)) 0 rgba(34, 33, 81, 0.15);
$box-shadow: $box-shadow-border, $box-shadow-common;
$focused-outline-color: #4c9ffe;

@keyframes pop {
  0% {
    transform: scale(1);
    box-shadow: var(--box-shadow);
  }
  100% {
    transform: scale(var(--scale));
    box-shadow: var(--box-shadow-picked-up);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.kanban-item {
  display: flex;
  box-sizing: border-box;
  transform: translate3d(var(--translate-x, 0), var(--translate-y, 0), 0)
    scaleX(var(--scale-x, 1)) scaleY(var(--scale-y, 1));
  transform-origin: 0 0;
  touch-action: manipulation;

  &.fadeIn {
    animation: fadeIn 500ms ease;
  }

  &.dragOverlay {
    --scale: 1.05;
    --box-shadow: $box-shadow;
    --box-shadow-picked-up: $box-shadow-border,
      -1px 0 15px 0 rgba(34, 33, 81, 0.01),
      0px 15px 15px 0 rgba(34, 33, 81, 0.25);
    z-index: 999;
  }

  .item {
    position: relative;
    display: flex;
    flex-grow: 1;
    align-items: center;
    background-color: $background-color;
    box-shadow: $box-shadow;
    outline: none;
    border-radius: 4px;
    box-sizing: border-box;
    list-style: none;
    transform-origin: 50% 50%;
    border: 1px solid #e5e5e5;

    -webkit-tap-highlight-color: transparent;

    color: $text-color;
    font-weight: $font-weight;
    font-size: 1rem;
    white-space: nowrap;

    transform: scale(1);
    transition: box-shadow 200ms cubic-bezier(0.18, 0.67, 0.6, 1.22);

    &:focus-visible {
      box-shadow: 0 0px 4px 1px $focused-outline-color, $box-shadow;
    }

    &:not(.withHandle) {
      touch-action: manipulation;
      cursor: grab;
    }

    &.dragging:not(.dragOverlay) {
      opacity:  0.5;
      z-index: 0;

      &:focus {
        box-shadow: $box-shadow;
      }
    }

    &.disabled {
      color: #999;
      background-color: #f1f1f1;
      &:focus {
        box-shadow: 0 0px 4px 1px rgba(0, 0, 0, 0.1), $box-shadow;
      }
      cursor: not-allowed;
    }

    &.dragOverlay {
      cursor: inherit;
      animation: pop 200ms cubic-bezier(0.18, 0.67, 0.6, 1.22);
      transform: scale(var(--scale));
      box-shadow: var(--box-shadow-picked-up);
      opacity: 1;
    }
  }
  .subcontainer-container{
    width: 100%;
    height: 100%;
  }

  .handle-container {
    position: absolute;
    right: 8px;
    top: 8px;
  }
}
.kanban-container {
  display: flex;
  flex-direction: column;
  grid-auto-rows: max-content;
  overflow: hidden;
  box-sizing: border-box;
  appearance: none;
  outline: none;
  min-width: 350px;
  margin: 10px;
  border-radius: 5px;
  min-height: 200px;
  transition: background-color 350ms ease;
  background-color: rgba(246, 246, 246, 1);
  border: 1px solid rgba(0, 0, 0, 0.05);
  font-size: 1em;

  .container-name{
    display: inline-flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    user-select: none;
    padding: calc(0.25rem - 1px) 0.25rem;
    height: 1.25rem;
    border: 1px solid transparent;
    min-width: 1.25rem;
    font-weight: 600;
    font-size: .625rem;
    letter-spacing: .04em;
    vertical-align: bottom;
    border-radius: 4px;
  }

  ul {
    display: grid;
    grid-gap: 10px;
    grid-template-columns: repeat(var(--columns, 1), 1fr);
    list-style: none;
    padding: 20px;
    margin: 0;
  }

  &.scrollable {
    ul {
      overflow-y: auto;
    }
  }
  &.hover {
    background-color: rgba(235, 235, 235, 1);
  }

  &.unstyled {
    overflow: visible;
    background-color: transparent !important;
    border: none !important;
  }

  &.horizontal {
    width: 100%;

    ul {
      grid-auto-flow: column;
    }
  }

  &.shadow {
    box-shadow: 0 1px 10px 0 rgba(34, 33, 81, 0.1);
  }
  .header {
    display: flex;
    padding: 10px 20px;
    padding-right: 8px;
    align-items: center;
    justify-content: space-between;
    background-color: #fff;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.08);
  }
  
  .actions {
    display: flex;

    .add-card-btn{
      font-size: 12px;
      padding: 5px 10px;
      border: 1px solid rgba(0, 0, 0, 0.08);;
    }
  }

}

.kanban-modal-close-icon {
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 1;
}
.kanban-add-card-button{
  position: fixed;
  top: 15px;
  right: 20px;
  padding: 5px 12px !important;
  font-size: 12px !important;
}

